Type Info History for Organize Imports and Context assist